--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^3.4.0"
